# VisualDeb

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  config.h  configure.ac  index.html  lazy
src/: Makefile.am  PluginRegistrar.vala  signals.vala  visualdeb.1  visualdeb.c  visualdeb.glade  visualdeb.vala
src/VisualDeb/: Environment.vala  Project.vala
src/VisualDebFiles/: Changelog.vala  Compat.vala  Conffiles.vala  Control.vala  Copyright.vala  CronFiles.vala  DebianFiles.vala  DhxFiles.vala  Dirs.vala  DocBase.vala  File.vala  Makefile.am  ManFiles.vala  Menu.vala  PackageManpages.vala  ReadmeDebian.vala  Rules.vala  SourceFormat.vala  Watch.vala
src/VisualDebTools/: Dch.vala  DebianTools.vala  Debuild.vala  DhMake.vala  Dpkg.vala  DpkgBuildpackage.vala  Dput.vala  Dupload.vala  FileCopy.vala  FileRename.vala  FileStuff.vala  Lintian.vala  Pbuilder.vala  PkgConfig.vala  Quilt.vala  Tar.vala
src/VisualDebUtilities/: DebianDocu.vala  FileHandling.vala  MaintainerGuide.vala  ManPages.vala  Policy.vala
tests/: Makefile.am  test_visualdeb.vala
umbrello/: VisualDeb.xmi  heading.vala
vapi/: config.vapi
