AC_INIT([screenshot-editor], [0.1], [bug-report@address])
AM_INIT_AUTOMAKE([-Wall -Werror])
AM_PROG_VALAC([0.7.0])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])

GLIB_REQUIRED=2.20.0
GTK_REQUIRED=2.18.0
GOOCANVAS_REQUIRED=0.15

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)
PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GTK_REQUIRED)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
PKG_CHECK_MODULES(GOOCANVAS, goocanvas >= $GOOCANVAS_REQUIRED)
AC_SUBST(GOOCANVAS_CFLAGS)
AC_SUBST(GOOCANVAS_LIBS)

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
